RESOLVED FIXED40296
[Qt] *All* WebGL layout tests fail!
https://bugs.webkit.org/show_bug.cgi?id=40296
Summary [Qt] *All* WebGL layout tests fail!
Jarkko Sakkinen
Reported 2010-06-08 06:33:13 PDT
Well, actually majority of them give PASS messages for everything but they still fail :) Problem can been seen from this diff for example: --- /tmp/layout-test-results/fast/canvas/webgl/bug-31889-expected.txt 2010-06-08 16:22:20.365363098 +0300 +++ /tmp/layout-test-results/fast/canvas/webgl/bug-31889-actual.txt 2010-06-08 16:22:20.365363098 +0300 @@ -1,3 +1,4 @@ +ERROR: LayoutTestController::overridePreference() does not support the 'WebKitWebGLEnabled' preference Regression test for https://bugs.webkit.org/show_bug.cgi?id=31889 : [v8] WebCore::WebGLArrayBufferInternal::byteLengthAttrGetter NULL pointer On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
Attachments
Test for WebKitWebGLEnabled to test controller (1.46 KB, patch)
2010-06-10 04:05 PDT, Jarkko Sakkinen
no flags
Jarkko Sakkinen
Comment 1 2010-06-10 04:05:08 PDT
Created attachment 58360 [details] Test for WebKitWebGLEnabled to test controller
WebKit Commit Bot
Comment 2 2010-06-10 13:41:34 PDT
Comment on attachment 58360 [details] Test for WebKitWebGLEnabled to test controller Clearing flags on attachment: 58360 Committed r60971: <http://trac.webkit.org/changeset/60971>
WebKit Commit Bot
Comment 3 2010-06-10 13:41:39 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2010-06-10 14:10:58 PDT
http://trac.webkit.org/changeset/60971 might have broken Leopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.