2010-06-10  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] *All* WebGL layout tests fail!
        https://bugs.webkit.org/show_bug.cgi?id=40296

        Added test for WebKitWebGLEnabled to
        LayoutTestController::overridePreference().

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::overridePreference):

Canonical link: https://commits.webkit.org/51986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60971 268f45cc-cd09-0410-ab3c-d52691b4dbfc