WebKitTools/DumpRenderTree/qt/LayoutTestControllerQt.cpp
@@ -513,6 +513,8 @@ void LayoutTestController::overridePreference(const QString& name, const QVarian
         setCaretBrowsingEnabled(value.toBool());
     else if (name == "WebKitPluginsEnabled")
         settings->setAttribute(QWebSettings::PluginsEnabled, value.toBool());
+    else if (name == "WebKitWebGLEnabled")
+        settings->setAttribute(QWebSettings::WebGLEnabled, value.toBool());
     else
         printf("ERROR: LayoutTestController::overridePreference() does not support the '%s' preference\n",
             name.toLatin1().data());
